--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>random rgb</title>
 </head>
 <body>
+    <div id="rgb"></div>
+
+    <button onclick="rgb()">Generate random RGB color</button>
+    <p id="text"></p>
     
 
-    <script src="./rps.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
